; ModuleID = '/home/carl/AnghaBench/git/extr_http-backend.c_get_content_length.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-backend.c_get_content_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"CONTENT_LENGTH\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"failed to parse CONTENT_LENGTH: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_content_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_content_length() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  store i32 -1, i32* %1, align 4
  %3 = call i8* @getenv(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %18

6:                                                ; preds = %0
  %7 = load i8*, i8** %2, align 8
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %6
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @git_parse_ssize_t(i8* %12, i32* %1)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %11
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @die(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %15, %11, %6, %0
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @git_parse_ssize_t(i8*, i32*) #1

declare dso_local i32 @die(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
